2013-07-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Change message text for warning on variables being dead at their definitions.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix lospre forwarding.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCBBlock.c,
	  src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/SDCCralloc.hpp,
	  src/*/ralloc.c:
	  Split non-connected live-ranges.

2013-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCset.h,
	  src/SDCCset.c:
	  Improve const use in sets.
	* src/SDCCglobl.h,
	  src/SDCCBBlock.c,
	  src/SDCCopt.c:
      Allow debug iCode dump after lospre.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Improve const use in bit vectors.

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix invalidation in lospre forwarding.

2013-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Mark receive opcodes as invalidating for losrpe.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated to make --disable-stm8-port work.

2013-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Disable safety in division for stm8.

2013-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCnaddr.hpp:
	  Add comment to reference the paper on bank selection.

2013-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Reorganize rules, disable rules depending on notUsed() or unimplemented ref count.
	* src/stm8/peep.c,
	  src/SDCCpeeph.c:
	  Fix const, handling of relative jumps, read from uninitialized pointer.

2013-06-16 Valentin Dudouyt <valentin dudouyt AT gmail.com>

	* src/stm8/main.c,
	* src/stm8/peep.c: implemented stm8canAssign and stm8notUsed,
	  fixed handling of label entities in stm8instructionSize,
	  added internal buffer in nextToken.